NEW253640
Drawing SystemImages have multiple context state handling errors
https://bugs.webkit.org/show_bug.cgi?id=253640
Summary Drawing SystemImages have multiple context state handling errors
Kimmo Kinnunen
Reported 2023-03-09 04:25:28 PST
Drawing SystemImages have multiple context state handling errors - ApplePay mutates the underlying CGContext - Display list recording does not set the state correctly
Attachments
Radar WebKit Bug Importer
Comment 1 2023-03-09 08:46:37 PST
Kimmo Kinnunen
Comment 2 2023-03-09 23:45:44 PST
Note You need to log in before you can comment on or make changes to this bug.